[gd_scene load_steps=2 format=4 uid="uid://cp2giu41n3542"]

[ext_resource type="Script" path="res://New Project/texture_i_ds.gd" id="1"]

[node name="Textures IDs" type="Node2D"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
offset_left = 65.0
offset_top = 15.0
offset_right = 1097.0
offset_bottom = 633.0
metadata/_edit_lock_ = true

[node name="Tile1" type="SpinBox" parent="."]
offset_left = 171.0
offset_top = 106.0
offset_right = 254.06199645996094
offset_bottom = 137.0

[node name="Label" type="Label" parent="Tile1"]
layout_mode = 0
offset_left = 103.0
offset_top = 4.0
offset_right = 143.0
offset_bottom = 27.0
text = "Tile 1"

[node name="Tile2" type="SpinBox" parent="."]
offset_left = 171.0
offset_top = 185.0
offset_right = 254.06199645996094
offset_bottom = 216.0

[node name="Label" type="Label" parent="Tile2"]
layout_mode = 0
offset_left = 103.0
offset_top = 4.0
offset_right = 143.0
offset_bottom = 27.0
text = "Tile 1"

[node name="Tile3" type="SpinBox" parent="."]
offset_left = 172.0
offset_top = 259.0
offset_right = 255.06199645996094
offset_bottom = 290.0

[node name="Label" type="Label" parent="Tile3"]
layout_mode = 0
offset_left = 103.0
offset_top = 4.0
offset_right = 143.0
offset_bottom = 27.0
text = "Tile 1"

[node name="Tile4" type="SpinBox" parent="."]
offset_left = 174.0
offset_top = 336.0
offset_right = 257.06201171875
offset_bottom = 367.0

[node name="Label" type="Label" parent="Tile4"]
layout_mode = 0
offset_left = 103.0
offset_top = 4.0
offset_right = 143.0
offset_bottom = 27.0
text = "Tile 1"

[node name="Tile5" type="SpinBox" parent="."]
offset_left = 174.0
offset_top = 429.0
offset_right = 257.06201171875
offset_bottom = 460.0

[node name="Label" type="Label" parent="Tile5"]
layout_mode = 0
offset_left = 103.0
offset_top = 4.0
offset_right = 143.0
offset_bottom = 27.0
text = "Tile 5"

[node name="Autotile1" type="SpinBox" parent="."]
offset_left = 421.0
offset_top = 105.0
offset_right = 504.06201171875
offset_bottom = 136.0

[node name="Label" type="Label" parent="Autotile1"]
layout_mode = 0
offset_left = 103.0
offset_top = 4.0
offset_right = 143.0
offset_bottom = 27.0
text = "Autotile 1"

[node name="Autotile2" type="SpinBox" parent="."]
offset_left = 426.0
offset_top = 185.0
offset_right = 509.06201171875
offset_bottom = 216.0

[node name="Label" type="Label" parent="Autotile2"]
layout_mode = 0
offset_left = 103.0
offset_top = 4.0
offset_right = 143.0
offset_bottom = 27.0
text = "Autotile 2"

[node name="Autotile3" type="SpinBox" parent="."]
offset_left = 428.0
offset_top = 259.0
offset_right = 511.06201171875
offset_bottom = 290.0

[node name="Label" type="Label" parent="Autotile3"]
layout_mode = 0
offset_left = 103.0
offset_top = 4.0
offset_right = 143.0
offset_bottom = 27.0
text = "Autotile 3"

[node name="Autotile4" type="SpinBox" parent="."]
offset_left = 429.0
offset_top = 337.0
offset_right = 512.06201171875
offset_bottom = 368.0

[node name="Label" type="Label" parent="Autotile4"]
layout_mode = 0
offset_left = 103.0
offset_top = 4.0
offset_right = 143.0
offset_bottom = 27.0
text = "Autotile 4"

[node name="APPLY" type="Button" parent="."]
offset_left = 947.0
offset_top = 544.0
offset_right = 1004.0
offset_bottom = 575.0
text = "APPLY"

[connection signal="pressed" from="APPLY" to="." method="_on_apply_pressed"]
