extends Node2D


func _on_apply_pressed():

    Variables.Tile1 = $Tile1.value
    Variables.Tile2 = $Tile2.value
    Variables.Tile3 = $Tile3.value
    Variables.Tile4 = $Tile4.value
    Variables.Tile5 = $Tile5.value

    Variables.AutoTile1 = $Autotile1.value
    Variables.AutoTile2 = $Autotile2.value
    Variables.AutoTile3 = $Autotile3.value
    Variables.AutoTile4 = $Autotile4.value
